--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.16.6",
     "aws-sdk": "^2.1664.0",
     "bcrypt": "^5.1.1",
+    "concurrently": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
