--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "concurrently 'vite' 'nodemon server.js'",
     "build": "vite build",
+    "start":"“vite build && node server.js”",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
