--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "concurrently 'vite' 'nodemon server.js'",
-    "build": "vite build",
-    "start":"“vite build && node server.js”",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "server": "nodemon server.js",
+    "build": "npm install --prefix ./  && npm run build --prefix ./ && npm install"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -26,6 +23,7 @@
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1"
