--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "build": "npm install  && npm run build"
+    "build": "vite build"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
